# GNOME-Journal

./: AUTHORS  ChangeLog  CodingStyle.txt  MAINTAINERS  Makefile.am  NEWS  README  autogen.sh  configure.ac
data/: Makefile.am  Makefile.in  gnome-activity-journal.desktop.in.in  gnome-journal.desktop.in  gtk-style.css  org.gnome.journal.gschema.xml.in
data/icons/: Makefile.am
po/: POTFILES.in
src/: CREATE_VAPI_README  Makefile.am  Makefile.in  activities.c  activities.vala  app.c  app.vala  dayview.c  dayview.vala  journal-activities.vala  journal-activity-info-page.vala  journal-app.vala  journal-backend.vala  journal-media-actors.vala  journal-previewer.vala  journal-search.vala  journal-timeline-navigator.vala  journal-timelineview.vala  journal-utils.vala  loading.c  loading.vala  main.c  main.vala  reminderview.c  reminderview.vala  revealer.c  revealer.vala  selectionbar.c  selectionbar.vala  timelineview.vala  utils.c  utils.vala  zg-backend.c  zg-backend.vala
src/lib/: Gd-1.0.h  Makefile.am  README  gd-main-icon-view.c  gd-main-list-view.c  gd-main-toolbar.c  gd-main-view.c  gd-main-view.h
vapi/: Gd-1.0.vapi  Makefile.am  Makefile.in  clutter-1.0.vapi  config.vapi
